修改样式和mdbug

--- a/_posts/2019-10-22-CDDA0.D稳定版.md
+++ b/_posts/2019-10-22-CDDA0.D稳定版.md
@@ -7,5 +7,6 @@ winaddr: https://download.cddabase.site/Official/download/0.D/cataclysmdda-0.D-8
 osxaddr: https://download.cddabase.site/Official/download/0.D/Cataclysm-0.D-8574-OSX-Tiles.dmg
 androidaddr: https://download.cddabase.site/Official/download/0.D/cataclysmdda-0.D-8574-Android-Tiles.apk
 score: 10.0
+category: Official
 ---
 0.D首个版本，是公认的最稳定版本中最新的
